--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,12 @@
 body {
   font-family: "Roboto", sans-serif;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
